ヘッダー変更

--- a/public/profile.html
+++ b/public/profile.html
@@ -96,8 +96,13 @@
             const statusDiv = document.getElementById('profile-status');
 
             // フォームに現在のユーザー情報を設定
-            // user.photoURLがない場合、Googleのデフォルトアイコンを表示
-            userIconPreview.src = user.photoURL || 'https://placehold.co/96x96/DB4437/FFFFFF?text=G';
+            // user.photoURLがない場合、汎用的なユーザーアイコン（SVG）を表示
+            if (user.photoURL) {
+                userIconPreview.src = user.photoURL;
+            } else {
+                userIconPreview.src = "data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='96' height='96' viewBox='0 0 24 24' fill='none' stroke='currentColor' stroke-width='1' stroke-linecap='round' stroke-linejoin='round' class='lucide lucide-circle-user'%3E%3Ccircle cx='12' cy='12' r='10'/%3E%3Ccircle cx='12' cy='10' r='3'/%3E%3Cpath d='M7 20.662V19a2 2 0 0 1 2-2h6a2 2 0 0 1 2 2v1.662'/%3E%3C/svg%3E";
+            }
+            
             displayNameInput.value = user.displayName || '';
             emailInput.value = user.email || '';
 
