--- a/public/_header.html
+++ b/public/_header.html
@@ -2,7 +2,7 @@
     <div class="flex justify-between items-center">
         <!-- 左側: ハンバーガーメニューボタン (円形) -->
         <div class="w-1/3 flex justify-start">
-            <button id="menu-toggle" class="p-2 rounded-full hover:bg-gray-200 focus:outline-none focus:ring-2 focus:ring-main">
+            <button id="menu-toggle" class="p-2 rounded-full hover:bg-gray-200 focus:outline-none">
                 <svg class="h-6 w-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path>
                 </svg>
@@ -12,7 +12,7 @@
         <!-- 中央: ロゴ -->
         <div class="w-1/3 flex justify-center">
             <a href="index.html">
-                <img src="images/sidepocket_Logo.png" alt="side pocket ロゴ" class="h-16 w-auto">
+                <img src="images/sidepocket_Logo.png" alt="side pocket ロゴ" class="h-22 w-auto">
             </a>
         </div>
 
@@ -30,7 +30,7 @@
     <!-- フルスクリーンオーバーレイメニュー (デフォルトでは非表示) -->
     <div id="mobile-menu" class="hidden fixed inset-0 bg-white shadow-lg z-20 p-4 flex flex-col">
         <div class="flex justify-end">
-            <button id="close-menu-button" class="p-2 rounded-md hover:bg-gray-100 text-gray-700 focus:outline-none focus:ring-2 focus:ring-main">
+            <button id="close-menu-button" class="p-2 rounded-md hover:bg-gray-100 text-gray-700 focus:outline-none">
                 <svg class="h-6 w-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
                 </svg>
