--- a/public/_header.html
+++ b/public/_header.html
@@ -1,18 +1,30 @@
-<header class="bg-white shadow-md rounded-2xl p-4 mb-6 max-w-4xl mx-auto">
+<header class="p-4 mb-6 max-w-4xl mx-auto">
     <div class="flex justify-between items-center">
         <!-- 左側: ハンバーガーメニューボタン (円形) -->
-        <div class="w-1/3 flex justify-start">
+        <div class="w-1/3 flex justify-start relative">
             <button id="menu-toggle" class="p-2 rounded-full hover:bg-gray-200 focus:outline-none">
                 <svg class="h-6 w-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path>
                 </svg>
             </button>
+
+            <!-- ドロップダウンメニュー (デフォルトでは非表示) -->
+            <div id="mobile-menu" class="hidden absolute left-0 mt-12 w-56 bg-white rounded-md shadow-lg z-20">
+                <nav class="flex flex-col p-2 space-y-1">
+                    <a href="index.html" class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:bg-gray-100">打刻</a>
+                    <a href="projects.html" class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:bg-gray-100">プロジェクト</a>
+                    <a href="summary.html" class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:bg-gray-100">サマリー</a>
+                    <a href="calendar.html" class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:bg-gray-100">カレンダー</a>
+                    <div class="border-t border-gray-200 my-1"></div>
+                    <button id="logout-button" class="block w-full text-left px-3 py-2 rounded-md text-base font-medium text-red-600 hover:bg-gray-100">ログアウト</button>
+                </nav>
+            </div>
         </div>
 
         <!-- 中央: ロゴ -->
         <div class="w-1/3 flex justify-center">
             <a href="index.html">
-                <img src="images/sidepocket_Logo.png" alt="side pocket ロゴ" class="h-22 w-auto">
+                <img src="images/sidepocket_Logo.png" alt="side pocket ロゴ" class="h-18 w-auto">
             </a>
         </div>
 
@@ -23,28 +35,6 @@
                 <img id="user-icon" src="https://placehold.co/32x32/EFEFEF/333333?text=?" class="w-8 h-8 rounded-full object-cover bg-gray-200">
                 <span id="user-info"></span>
             </a>
-            <!-- ログアウトボタンはメニュー内に移動 -->
-        </div>
-    </div>
-
-    <!-- フルスクリーンオーバーレイメニュー (デフォルトでは非表示) -->
-    <div id="mobile-menu" class="hidden fixed inset-0 bg-white shadow-lg z-20 p-4 flex flex-col">
-        <div class="flex justify-end">
-            <button id="close-menu-button" class="p-2 rounded-md hover:bg-gray-100 text-gray-700 focus:outline-none">
-                <svg class="h-6 w-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
-                </svg>
-            </button>
-        </div>
-        <nav class="flex flex-col space-y-2 mt-4 flex-grow">
-            <a href="index.html" class="btn text-gray-700 hover:text-main-dark hover:bg-gray-100 px-3 py-2 rounded-md text-base font-medium">打刻</a>
-            <a href="projects.html" class="btn text-gray-700 hover:text-main-dark hover:bg-gray-100 px-3 py-2 rounded-md text-base font-medium">プロジェクト</a>
-            <a href="summary.html" class="btn text-gray-700 hover:text-main-dark hover:bg-gray-100 px-3 py-2 rounded-md text-base font-medium">サマリー</a>
-            <a href="calendar.html" class="btn text-gray-700 hover:text-main-dark hover:bg-gray-100 px-3 py-2 rounded-md text-base font-medium">カレンダー</a>
-        </nav>
-        <!-- ログアウトボタンをメニューの最下部に配置 -->
-        <div class="mt-auto pt-4 border-t border-gray-200">
-            <button id="logout-button" class="btn bg-red-500 hover:bg-red-600 text-white font-bold py-2 px-4 rounded-md w-full">ログアウト</button>
         </div>
     </div>
     <!-- ヘッダー関連のステータス表示エリア -->
