ハンバーガー背景変更

--- a/public/_header.html
+++ b/public/_header.html
@@ -1,8 +1,8 @@
-<header class="p-4 mb-6 max-w-4xl mx-auto">
+<header class="p-4 max-w-4xl mx-auto bg-white">
     <div class="flex justify-between items-center">
         <!-- 左側: ハンバーガーメニューボタン (円形) -->
         <div class="w-1/3 flex justify-start relative">
-            <button id="menu-toggle" class="p-2 rounded-full hover:bg-gray-200 focus:outline-none">
+            <button id="menu-toggle" class="p-2 rounded-full bg-white hover:bg-gray-200 focus:outline-none">
                 <svg class="h-6 w-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path>
                 </svg>
@@ -24,7 +24,7 @@
         <!-- 中央: ロゴ -->
         <div class="w-1/3 flex justify-center">
             <a href="index.html">
-                <img src="images/sidepocket_Logo.png" alt="side pocket ロゴ" class="h-18 w-auto">
+                <img src="images/sidepocket_Logo.png" alt="side pocket ロゴ" class="h-16 w-auto">
             </a>
         </div>
 
@@ -32,7 +32,7 @@
         <div class="w-1/3 flex justify-end items-center space-x-2 text-sm text-gray-600">
             <a href="profile.html" class="flex items-center space-x-2 text-gray-600 hover:text-main no-underline">
                 <!-- ユーザーアイコン画像 -->
-                <img id="user-icon" src="https://placehold.co/32x32/EFEFEF/333333?text=?" class="w-8 h-8 rounded-full object-cover bg-gray-200">
+                <img id="user-icon" src="https://placehold.co/32x32/EFEFEF/333333?text=?" class="w-8 h-8 rounded-full object-cover">
                 <span id="user-info"></span>
             </a>
         </div>
