--- a/public/_header.html
+++ b/public/_header.html
@@ -1,4 +1,4 @@
-<header class="p-4 max-w-4xl mx-auto bg-white">
+<header class="p-4 max-w-4xl mx-auto">
     <div class="flex justify-between items-center">
         <!-- 左側: ハンバーガーメニューボタン (円形) -->
         <div class="w-1/3 flex justify-start relative">
@@ -24,7 +24,7 @@
         <!-- 中央: ロゴ -->
         <div class="w-1/3 flex justify-center">
             <a href="index.html">
-                <img src="images/sidepocket_Logo.png" alt="side pocket ロゴ" class="h-16 w-auto">
+                <img src="images/sidepocket_Logo.png" alt="side pocket ロゴ" class="h-18 w-auto">
             </a>
         </div>
 
