--- a/public/_header.html
+++ b/public/_header.html
@@ -7,24 +7,12 @@
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path>
                 </svg>
             </button>
-
-            <!-- ドロップダウンメニュー (デフォルトでは非表示) -->
-            <div id="mobile-menu" class="hidden absolute left-0 mt-12 w-56 bg-white rounded-md shadow-lg z-20">
-                <nav class="flex flex-col p-2 space-y-1">
-                    <a href="index.html" class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:bg-gray-100">打刻</a>
-                    <a href="projects.html" class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:bg-gray-100">プロジェクト</a>
-                    <a href="summary.html" class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:bg-gray-100">サマリー</a>
-                    <a href="calendar.html" class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:bg-gray-100">カレンダー</a>
-                    <div class="border-t border-gray-200 my-1"></div>
-                    <button id="logout-button" class="block w-full text-left px-3 py-2 rounded-md text-base font-medium text-red-600 hover:bg-gray-100">ログアウト</button>
-                </nav>
-            </div>
         </div>
 
         <!-- 中央: ロゴ -->
         <div class="w-1/3 flex justify-center">
             <a href="index.html">
-                <img src="images/sidepocket_Logo.png" alt="side pocket ロゴ" class="h-18 w-auto">
+                <img src="images/sidepocket_Logo.png" alt="side pocket ロゴ" class="h-16 w-auto">
             </a>
         </div>
 
@@ -39,4 +27,39 @@
     </div>
     <!-- ヘッダー関連のステータス表示エリア -->
     <div id="header-status-message" class="text-center h-5 mt-2"></div>
+
+    <!-- サイドバーメニュー (デフォルトでは非表示) -->
+    <div id="sidebar-menu" class="fixed inset-y-0 left-0 w-16 bg-white shadow-lg z-30 transform -translate-x-full transition-transform duration-300 ease-in-out">
+        <div class="flex justify-end p-4">
+            <button id="close-menu-button" class="p-2 rounded-full hover:bg-gray-200 focus:outline-none">
+                <svg class="h-6 w-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
+                </svg>
+            </button>
+        </div>
+        <nav class="flex flex-col p-2 space-y-2">
+            <a href="index.html" class="flex items-center p-2 rounded-md text-gray-700 hover:bg-gray-100 group">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 flex-shrink-0" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"/></svg>
+                <span class="ml-3 menu-text hidden group-hover:block">打刻</span>
+            </a>
+            <a href="projects.html" class="flex items-center p-2 rounded-md text-gray-700 hover:bg-gray-100 group">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 flex-shrink-0" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 11H5m14 0a2 2 0 012 2v6a2 2 0 01-2 2H5a2 2 0 01-2-2v-6a2 2 0 012-2m14 0V9a2 2 0 00-2-2M5 11V9a2 2 0 012-2m0 0V5a2 2 0 012-2h6a2 2 0 012 2v2M7 7h10"/></svg>
+                <span class="ml-3 menu-text hidden group-hover:block">プロジェクト</span>
+            </a>
+            <a href="summary.html" class="flex items-center p-2 rounded-md text-gray-700 hover:bg-gray-100 group">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 flex-shrink-0" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z"/></svg>
+                <span class="ml-3 menu-text hidden group-hover:block">サマリー</span>
+            </a>
+            <a href="calendar.html" class="flex items-center p-2 rounded-md text-gray-700 hover:bg-gray-100 group">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 flex-shrink-0" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z"/></svg>
+                <span class="ml-3 menu-text hidden group-hover:block">カレンダー</span>
+            </a>
+        </nav>
+        <div class="mt-auto pt-4 border-t border-gray-200">
+            <button id="logout-button" class="flex items-center w-full text-left px-3 py-2 rounded-md text-base font-medium text-red-600 hover:bg-gray-100 group">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 flex-shrink-0" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1"/></svg>
+                <span class="ml-3 menu-text hidden group-hover:block">ログアウト</span>
+            </button>
+        </div>
+    </div>
 </header>
